# idex

./: .gitignore  .impeccable.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/desktop/: electron-builder.json  index.html  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
apps/desktop/dist-electron/: main.js  preload.js
apps/desktop/electron/: agent-host.ts  composio-oauth.ts  config-store.ts  external-agent.ts  keychain.ts  main.ts  preload.ts  scm.ts  workspace-search.ts  workspace.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: agent.rs  config.rs  keychain.rs  main.rs  scm.rs  search.rs  workspace.rs
apps/desktop/src/components/: Button.tsx  Card.tsx  Cockpit.tsx  CommandPalette.tsx  ExternalAgentSurface.tsx  FeedPane.tsx  IdexLogo.tsx  PromptInput.tsx  SessionTabs.tsx  SessionView.tsx  Settings.tsx  Setup.tsx  Sidebar.tsx
apps/desktop/src/lib/: ipc-tauri.ts  ipc.ts
apps/desktop/src/store/: agent.ts  autopilot.ts  editor-ui.ts  external-agent.ts  feed.ts  projects.ts  scm.ts  search.ts  settings.ts  workspace.ts
apps/desktop/src/styles/: index.css
apps/landing/: index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/landing/src/: App.tsx
apps/landing/src/components/: CockpitDemo.tsx  (+7 more)
docs/plans/: 2026-04-19-idex-phase2-curator-feed.md
docs/specs/: 2026-04-19-idex-design.md  CURATION_ISSUES.md
scripts/: dev.sh
(+14 files in other folders)
